--- a/client/index.html
+++ b/client/index.html
@@ -15,5 +15,11 @@
         <button id="results" type= 'submit'>Show results</button>
         <button id="get-result" type= 'submit'>get result</button>
     </header>
+    <main>
+        <section id="Search">
+            
+
+        </section>
+    </main>
 </body>
 </html>
