added styles and file structure

--- a/client/index.html
+++ b/client/index.html
@@ -6,18 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="./assets/api.js"></script>
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
     <header>
-        <img src="assets/google-logo.png" width="500" height="300">
-        <label for="search-bar">Search something:</label>
-        <input type="text" id="search-bar" name="search-bar">
-        <button id="results" type= 'submit'>Show results</button>
-        <button id="get-result" type= 'submit'>get result</button>
+        <img src="assets/google-logo.png">
+        <div id="search-div">
+            <label for="search-bar">Search something:</label>
+            <input type="text" id="search-bar" name="search-bar">
+        </div>
+        <div id="button-div">
+            <button id="results" type= 'submit'>Show results</button>
+            <button id="get-result" type= 'submit'>get result</button>
+        </div>
+        
     </header>
     <main>
         <section id="Search">
-            
 
         </section>
     </main>
