--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,11 @@
     <header>
         <img src="assets/google-logo.png">
         <div id="search-div">
-            <label for="search-bar">Search something:</label>
-            <input type="text" id="search-bar" name="search-bar">
+            <input type="text" id="search-bar" name="search-bar" placeholder = 'What would you like to search?'>
         </div>
         <div id="button-div">
-            <button id="results" type= 'submit'>Show results</button>
-            <button id="get-result" type= 'submit'>get result</button>
+            <button id="results" type= 'submit'>Google Search</button>
+            <button id="get-result" type= 'submit'>I'm Feeling Lucky</button>
         </div>
         
     </header>
